# internal/resources/recurrences/repository/zz_generated_select.go
@@ -1,0 +1,52 @@
+// Code generated. DO NOT EDIT.
+
+package repository
+
+import (
+	"github.com/Masterminds/squirrel"
+	"github.com/felipe1496/open-wallet/internal/utils"
+)
+
+func (r *RecurrencesRepoImpl) Select(db utils.Executer, filter *utils.QueryOptsBuilder) ([]Recurrence, error) {
+	query := squirrel.Select("id", "user_id", "name", "note", "amount", "day_of_month", "category_id", "category_name", "category_color", "start_period", "end_period", "created_at").
+		From("v_recurrences").
+		PlaceholderFormat(squirrel.Dollar)
+
+	query = utils.QueryOptsToSquirrel(query, filter)
+
+	sql, args, err := query.ToSql()
+
+	if err != nil {
+		return nil, err
+	}
+
+	rows, err := db.Query(sql, args...)
+
+	if err != nil {
+		return nil, err
+	}
+
+	defer rows.Close()
+
+	var results []Recurrence = []Recurrence{}
+	for rows.Next() {
+		var item Recurrence
+		err = rows.Scan(
+			&item.ID,
+			&item.UserID,
+			&item.Name,
+			&item.Note,
+			&item.Amount,
+			&item.DayOfMonth,
+			&item.CategoryID,
+			&item.CategoryName,
+			&item.CategoryColor,
+			&item.StartPeriod,
+			&item.EndPeriod,
+			&item.CreatedAt,
+		)
+		results = append(results, item)
+	}
+
+	return results, nil
+}
